# jontraderlar-v2

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  dev_polling.py  logging.py  main.py  messages.py  worker.py
app/bot/: factory.py  instance.py  operations.py
app/bot/routers/: commands.py  messages.py
app/db/: client.py  models.py  operations.py
app/exchanges/: base.py  bingx.py  bybit.py  facade.py
app/tasks/: jobs.py  pool.py
app/workflow/: graph.py  llm.py  prompts.py  state.py
app/workflow/nodes/: database_check.py  exchange_check.py  follow_up.py  general.py  router.py  telegram_url.py
deploy/: deploy.sh  jontraderlar-bot.service  jontraderlar-worker.service  nginx.conf.example
